<resources>
    <string name="app_name">FTF</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_create_account">Create an account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to sign up -->
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_up">Sign up</string>

    <!-- Strings related to main activity -->
    <string name="content_description_profile_image">Profile image</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_help">Help</string>
    <string name="action_home">Home</string>
    <string name="action_orders">Orders</string>
    <string name="action_payment">Payment</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_up_as_vendor">Sign up as a vendor</string>

    <!-- Placeholders -->
    <string name="placeholder_name">Full Name</string>
    <string name="placeholder_email">email@example.com</string>

    <!-- Strings related to information view activity -->
    <string name="action_placer_order">Place Order</string>
    <string name="placeholder_business_name">Business Name</string>
    <string name="placeholder_business_description">Description</string>
    <string name="placeholder_business_hours">Mon - Fri: 12:00pm - 11:00pm</string>

    <!-- Menu item placeholders -->
    <string name="menu_item_content_description">Menu item image</string>
    <string name="menu_item_name">Name</string>
    <string name="menu_item_description">
        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua.
    </string>
    <string name="menu_item_price">$0.00</string>
</resources>
