<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/action_home" />
        <item
            android:id="@+id/nav_payment"
            android:title="@string/action_payment" />
        <item
            android:id="@+id/nav_orders"
            android:title="@string/action_orders"
            app:actionViewClass="android.widget.TextView"/>
        <item
            android:id="@+id/nav_help"
            android:title="@string/action_help" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_sign_up_vendor"
            android:title="@string/action_sign_up_as_vendor" />
        <item
            android:id="@+id/nav_view_menu"
            android:title="View Menu" />
    </group>
</menu>
